now can add or delete host on gui

--- a/exe/adfilter/MainWindow.xaml
+++ b/exe/adfilter/MainWindow.xaml
@@ -7,7 +7,8 @@
         Style="{StaticResource WindowStyle}">
     <Grid>
         <ui:HamburgerMenu ItemClick="HamburgerMenu_ItemClick"
-                          OptionsItemClick="HamburgerMenu_ItemClick">
+                          OptionsItemClick="HamburgerMenu_ItemClick"
+                          SelectedIndex="1">
             <ui:HamburgerMenu.ItemsSource>
                 <ui:HamburgerMenuItemCollection>
                     <ui:HamburgerMenuGlyphItem Glyph="" Label="Driver">
