--- a/exe/adfilter/View/Host.xaml
+++ b/exe/adfilter/View/Host.xaml
@@ -3,9 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ui="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:vm="clr-namespace:adfilter.ViewModel"
+             xmlns:view="clr-namespace:adfilter.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <ui:MetroAnimatedSingleRowTabControl>
+            <TabItem Header="WhiteList">
+                <view:HostEdit >
+                    <view:HostEdit.DataContext>
+                        <vm:WhiteHostViewModel/>
+                    </view:HostEdit.DataContext>
+                </view:HostEdit>
+            </TabItem>
+
+            <TabItem Header="BlackList">
+                <view:HostEdit >
+                    <view:HostEdit.DataContext>
+                        <vm:BlackHostViewModel/>
+                    </view:HostEdit.DataContext>
+                </view:HostEdit>
+            </TabItem>
+        </ui:MetroAnimatedSingleRowTabControl>
     </Grid>
 </UserControl>
