--- a/exe/adfilter/View/HostEdit.xaml
+++ b/exe/adfilter/View/HostEdit.xaml
@@ -1,22 +1,19 @@
-﻿<UserControl x:Class="adfilter.View.Driver"
+﻿<UserControl x:Class="adfilter.View.HostEdit"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ui="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:vm="clr-namespace:adfilter.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.DataContext>
-        <vm:DriverViewModel/>
-    </UserControl.DataContext>
     <Grid>
-
         <StackPanel>
-            <ui:Tile Title="Start"
-                 Command="{Binding StartCommand}"/>
-            <ui:Tile Title="Stop" 
-                 Command="{Binding StopCommand}"/>
+            <TextBox Name="input" Width="300"/>
+            <Button Content="add" 
+                    Command="{Binding AddCommand}" 
+                    CommandParameter="{Binding ElementName=input,Path=Text}"/>
+            <Button Content="del"
+                    Command="{Binding DelCommand}" 
+                    CommandParameter="{Binding ElementName=input,Path=Text}"/>
         </StackPanel>
     </Grid>
 </UserControl>
