--- a/exe/adfilter/View/HostEdit.xaml
+++ b/exe/adfilter/View/HostEdit.xaml
@@ -8,6 +8,8 @@
     <Grid>
         
         <Grid.Resources>
+
+            <FontFamily x:Key="segmdl2">pack://application:,,,/res/#segmdl2</FontFamily>
             <Style TargetType="Button" BasedOn="{StaticResource AccentedSquareButtonStyle}">
                 <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
                 <Setter Property="Width" Value="30"/>
